--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "homepage": "https://github.com/goitacademy/react-homework-template",
   "dependencies": {
+    "modern-normalize": "^1.1.0",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "prop-types": "^15.8.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
