--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://dmitrij-pularija.github.io/goit-react-hw-07-phonebook/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
+    "axios": "^1.3.3",
     "formik": "^2.2.9",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
@@ -13,8 +14,8 @@
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
-    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.3"
   },
