--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
     "prop-types": "^15.8.1",
+    "rc-dropdown": "^4.0.1",
+    "rc-menu": "^9.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.3"
   },
