--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "goit-react-hw-08-phonebook",
+  "name": "test-pics",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://dmitrij-pularija.github.io/goit-react-hw-08-phonebook/",
+  "homepage": "https://dmitrij-pularija.github.io/test-pics/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.3",
-    "formik": "^2.2.9",
     "modern-normalize": "^1.1.0",
-    "notiflix": "^3.2.6",
     "prop-types": "^15.8.1",
-    "rc-dropdown": "^4.0.1",
-    "rc-menu": "^9.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.5",
